--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Planty",
+    "title": "Hephzi",
     "path_prefix": "/",
     "favicon": "images/favicon.png",
     "logo_dark": "images/logo.svg",
